--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ user.login=Login
 user.name=Name
 user.new=New user registration
 user.password=Password
+user.role=Role
 
 menu.login=Login
 menu.registration=Registration
@@ -16,5 +17,8 @@ menu.click=Click here to login
 menu.greeting=Hello, 
 menu.sign.out=Sign out
 menu.sign.up=Sign up
+menu.sign.in.button=Sign in
+menu.sign.in=Account log in
+
 
 
