Registration and login logic

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ user.name=Name
 user.new=New user registration
 user.password=Password
 user.role=Role
+user.balance=Balance
 
 menu.login=Login
 menu.registration=Registration
@@ -19,6 +20,8 @@ menu.sign.out=Sign out
 menu.sign.up=Sign up
 menu.sign.in.button=Sign in
 menu.sign.in=Account log in
+menu.back=Back to Home Page
+menu.error=Error page
 
 
 
