List of users and statements for manager added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,13 @@ user.password=Password
 user.role=Role
 user.balance=Balance
 
+statement.list=All statement list
+statement.id=Statement Id
+statement.name=Name
+statement.about=About
+statement.status=Status
+statement.time=Creating data
+
 menu.login=Login
 menu.registration=Registration
 menu.success.sign.in=You have signed up successfully!
