--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -11,6 +11,13 @@ user.password=\u041F\u0430\u0440\u043E\u043B\u044C
 user.role=\u0420\u043E\u043B\u044C
 user.balance=\u0411\u0430\u043B\u0430\u043D\u0441
 
+statement.list=\u0421\u043F\u0438\u0441\u043E\u043A \u0432\u0441\u0456\u0445 \u0437\u0430\u044F\u0432
+statement.id=ID \u0437\u0430\u044F\u0432\u0438
+statement.name=\u041D\u0430\u0437\u0432\u0430 \u0437\u0430\u044F\u0432\u0438
+statement.about=\u041F\u0440\u043E \u0437\u0430\u044F\u0432\u0443
+statement.status=\u0421\u0442\u0430\u0442\u0443\u0441 
+statement.time=\u0414\u0430\u0442\u0430 \u0441\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F
+
 
 menu.login=\u041B\u043E\u0433\u0456\u043D
 menu.registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
