Adding money for USER by MANAGER

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ user.role=Role
 user.balance=Balance
 
 statement.list=All statement list
-statement.id=Statement Id
+statement.id=Statement ID
 statement.name=Name
 statement.about=About
 statement.status=Status
