User statement list

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,12 +11,23 @@ user.password=Password
 user.role=Role
 user.balance=Balance
 
+
+admin.add.money=Add money
+admin.addition=Addition
+
 statement.list=All statement list
 statement.id=Statement ID
 statement.name=Name
 statement.about=About
 statement.status=Status
 statement.time=Creating data
+statement.create=Create statement
+statement.create.success=You have successfully created a statement
+statement.user.login=Client login
+statement.price=Price
+statement.set=Set
+statement.set.menu=Set price for statement
+
 
 menu.login=Login
 menu.registration=Registration
@@ -29,6 +40,9 @@ menu.sign.in.button=Sign in
 menu.sign.in=Account log in
 menu.back=Back to Home Page
 menu.error=Error page
+menu.save=Save
+menu.main.go=Go to the main menu
+menu.main=Main menu
 
 
 
