--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,7 @@ admin.add.money=Add money
 admin.addition=Addition
 
 statement.list=All statement list
+statement.user.list=User statement list
 statement.id=Statement ID
 statement.name=Name
 statement.about=About
@@ -27,6 +28,7 @@ statement.user.login=Client login
 statement.price=Price
 statement.set=Set
 statement.set.menu=Set price for statement
+statement.pay=Pay
 
 
 menu.login=Login
