Main logic done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 main.title.homepage=Home page
 main.headline=Repair Agency
 
-user.list=User list
+user.list=All users list
 user.success.registration=Successful registration
 user.id=User ID
 user.login=Login
@@ -14,6 +14,13 @@ user.balance=Balance
 
 admin.add.money=Add money
 admin.addition=Addition
+admin.appoint.master=Appoint as master
+
+master.id=Master ID
+master.list=All master list
+master.take=Take order
+master.done=Done
+
 
 statement.list=All statement list
 statement.user.list=User statement list
@@ -29,6 +36,8 @@ statement.price=Price
 statement.set=Set
 statement.set.menu=Set price for statement
 statement.pay=Pay
+statement.cancel=Cancel
+statement.comment=Leave a comment
 
 
 menu.login=Login
