--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ user.balance=Balance
 admin.add.money=Add money
 admin.addition=Addition
 admin.appoint.master=Appoint as master
+report.list=Report list
 
 master.id=Master ID
 master.list=All master list
@@ -38,6 +39,7 @@ statement.set.menu=Set price for statement
 statement.pay=Pay
 statement.cancel=Cancel
 statement.comment=Leave a comment
+statement.master=Master name
 
 
 menu.login=Login
