Fields validation added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 main.title.homepage=Home page
 main.headline=Repair Agency
 
-user.list=All users list
+user.list=Users list
 user.success.registration=Successful registration
 user.id=User ID
 user.login=Login
@@ -15,16 +15,23 @@ user.balance=Balance
 admin.add.money=Add money
 admin.addition=Addition
 admin.appoint.master=Appoint as master
+admin.menu.users_list=  View the data of all users of the site. Ability to supplement the balance. Opportunity to appoint the user as master.
+admin.menu.masters_list=  View the data of all masters of the site.
+admin.menu.statements_list=  Check all active statements. Ability to set the price of the order.
+admin.menu.reports_list=  Check all completed statements of Repair Agency.
+user.menu.create=  Form for creating a statement for car repair.
+user.menu.my.statements=  Menu for view my statements.
+master.menu.user.statements=  Menu for view all active orders.
 report.list=Report list
 
 master.id=Master ID
-master.list=All master list
+master.list=Master list
 master.take=Take order
 master.done=Done
 
 
-statement.list=All statement list
-statement.user.list=User statement list
+statement.list=Statement list
+statement.user.list=My statements
 statement.id=Statement ID
 statement.name=Name
 statement.about=About
@@ -46,7 +53,8 @@ menu.login=Login
 menu.registration=Registration
 menu.success.sign.in=You have signed up successfully!
 menu.click=Click here to login
-menu.greeting=Hello, 
+menu.greeting1=Welcome back, 
+menu.greeting2=If you forget, your role is  
 menu.sign.out=Sign out
 menu.sign.up=Sign up
 menu.sign.in.button=Sign in
@@ -56,6 +64,17 @@ menu.error=Error page
 menu.save=Save
 menu.main.go=Go to the main menu
 menu.main=Main menu
+menu.repair.agency=REPAIR AGENCY
+menu.total.rows=Total rows
+menu.page=Page
+menu.of=of
+menu.check=View
+menu.page.h1=The best repair agency is in your town
+menu.page.describe.1=\u2753Your metal horse has stopped turning on for some reasons? 
+menu.page.describe.2=\u2753Is something suspiciously knocking inside it?  
+menu.page.describe.3=\u2753Its wheels are not as shaped as usual?
+menu.page.describe.4=\u2757We don't want to upset you, but it's broken! 
+menu.page.describe.5=No problem! We will deal with any breakdown.
 
 
 
