Some mistakes fixed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,8 @@ user.new=New user registration
 user.password=Password
 user.role=Role
 user.balance=Balance
+user.create=Create
+user.confirm=Confirm
 
 
 admin.add.money=Add money
@@ -44,6 +46,7 @@ statement.price=Price
 statement.set=Set
 statement.set.menu=Set price for statement
 statement.pay=Pay
+statement.pay.bill=Pay bill
 statement.cancel=Cancel
 statement.comment=Leave a comment
 statement.master=Master name
